app/styles/main.scss
/*
To customize the look and feel of Ionic, you can override the variables
in ionic's _variables.scss file.

For example, you might change some of the default colors:

$light:                           #fff !default;
$stable:                          #f8f8f8 !default;
$positive:                        #4a87ee !default;
$calm:                            #43cee6 !default;
$balanced:                        #66cc33 !default;
$energized:                       #f0b840 !default;
$assertive:                       #ef4e3a !default;
$royal:                           #8a6de9 !default;
$dark:                            #444 !default;
*/
// The path for our ionicons font files, relative to the built CSS in www/css
//$ionicons-font-path: "../lib/ionic/fonts" !default;
@import "../lib/ionic/scss/ionic";

.angular-google-map-container {
  height: 400px;
}

.marker-labels {
  background-color: #44e7fc;
  border: 1px solid #1aacc3;
  padding: 3px;
}

ul.list-inline {
  li {
    display: inline-block;
    margin-right: 20px;
  }
}

#myOverlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
#infoWnd_frame {
  position: absolute;
  width: 300px;
  height: 80px;
  background-size: contain;
}
#infoWnd_body {
  position: absolute;
  width: 300px;
  height: 80px;
  left: 0px;
  top: 0px;
}
.popover_priceDiv {
  font-size: 18px;
  font-weight:bold;
  vertical-align: middle;
  font-family: Helvetica,sans-serif;
  padding: 10px;
  padding-top: 20px;
  text-align:center;
  background-color: #31bde8;
  color: white;
  display: inline;
  float: left;      
  height: 80px;
  width: 60px;
}
.popover_infoDiv {
  font-size: 14px;
  font-family: Helvetica,sans-serif;
  background-color: #3b3b3a;
  padding: 10px;
  color: white;
  display: inline;
  float: left;
  height: 100%;
  width: 200px;
}
.popover_arrowDiv {
  font-size: 14px;
  font-family: Helvetica,sans-serif;
  background-color: #3b3b3a;
  padding: 0px;
  color: white;
  display: inline;
  float: left;
  line-height: 80px;
  width: 20px;
}
.popover_header {
  font-size: 18px;
}
.arrow-down {
  width: 0; 
  height: 0; 
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;   
  border-top: 15px solid #3b3b3a;
  clear: both;
  left: 145px;
  position: relative;
}   

